--- a/text/main.tex
+++ b/text/main.tex
@@ -40,6 +40,7 @@
 \newcommand{\Output}[1][]{\ensuremath{O
 	\ifthenelse{\isempty{#1}}{}{_{#1}}}}
 \newtheorem{prop}{Proposition}
+\newtheorem{theorem}{Theorem}
 \theoremstyle{definition}
 \newtheorem{defn}{Definition}
 \newtheorem*{example}{Example}
