--- a/text/main.tex
+++ b/text/main.tex
@@ -27,11 +27,13 @@
 \newcommand{\timeestimation}[1]{ \footnote{#1} }
 \newcommand{\citationneeded}{{\em (citation needed) } }
 \newcommand{\lineofthought}[1]{{\bf [#1] }}
+\newcommand{\TODO}{\ensuremath{\left<\mathbf{TODO}\right> }}
 
 % Disabled Note Commands
 %\newcommand{\timeestimation}[1]{}
 %\newcommand{\citationneeded}{}
 %\newcommand{\lineofthought}[1]{}
+%\newcommand{\TODO}{}
 
 \newcommand{\interpret}[2][]{\ensuremath{\left\llbracket #2 \right\rrbracket
 	\ifthenelse{\isempty{#1}}{}{ _{#1}}}}
@@ -55,28 +57,19 @@
 %\end{abstract}
 %
 \chapter{Introduction}
-
-\include*{introduction/introduction}
-
-\include*{for/for}
-
-\include*{while/while}
+	\include*{introduction/introduction/introduction}
+	\include*{introduction/for/for}
+	\include*{introduction/while/while}
 
 \chapter{Computability}
-
-\include*{transforms/transforms}
-
-\include*{completeness/completeness}
-
-\include*{self/self}
+	\include*{computability/transforms/transforms}
+	\include*{computability/completeness/completeness}
+	\include*{computability/self/self}
 
 \chapter{Complexity}
-
-\include*{complexity/complexity}
-
-\include*{robustness/robustness}
-
-\include*{langcomplexity/langcomplexity}
+	\include*{complexity/complexity/complexity}
+	\include*{complexity/robustness/robustness}
+	\include*{complexity/langcomplexity/langcomplexity}
 
 \bibliography{biblio}{}
 \bibliographystyle{plain}
