expressions are now parsed via parsec.expr
you can do nil.nil.nil.:end now without breaking the parser

--- a/text/appendix.tex
+++ b/text/appendix.tex
@@ -1,5 +1,5 @@
 \section{Implementing the {\tt WHILE} Language} 
-\label{sec:implementing while}
+\label{sec:implementingWhile}
 \lineofthought{
 	\begin{itemize}
 		\item Haskell: good support for parsing ({\tt Parsec}) and clean case 
