--- a/text/biblio.bib
+++ b/text/biblio.bib
@@ -32,3 +32,10 @@
   pages={43--54},
   year={2000}
 }
+@book{aho2007compilers,
+  title={Compilers: principles, techniques, and tools},
+  author={Aho, A.V. and Lam, M.S. and Sethi, R. and Ullman, J.D.},
+  volume={1009},
+  year={2007},
+  publisher={Pearson/Addison Wesley}
+}
