Much of the transforms section is written
About compilers, interpreters and specializers.

--- a/text/biblio.bib
+++ b/text/biblio.bib
@@ -39,3 +39,19 @@
   year={2007},
   publisher={Pearson/Addison Wesley}
 }
+@article{futamura1999partial,
+  title={Partial evaluation of computation process--an approach to a compiler-compiler},
+  author={Futamura, Y.},
+  journal={Higher-Order and Symbolic Computation},
+  volume={12},
+  number={4},
+  pages={381--391},
+  year={1999},
+  publisher={Springer}
+}
+@book{jones1993partial,
+  title={Partial evaluation and automatic program generation},
+  author={Jones, N.D. and Gomard, C.K. and Sestoft, P.},
+  year={1993},
+  publisher={Peter Sestoft}
+}
