Added a 'Source' data expression
It means that a procedure's code is returned

--- a/implementation/while/TODO
+++ b/implementation/while/TODO
@@ -1,2 +1,3 @@
 * Specializing
-* Making source available in program
+* Making source available in program ('<' function_name '>')
+* universal function ('[[' data ']]')
