Halting problem is convered

--- a/text/biblio.bib
+++ b/text/biblio.bib
@@ -55,3 +55,18 @@
   year={1993},
   publisher={Peter Sestoft}
 }
+
+@article {etesi2002blackhole,
+   author = {Etesi, Gábor and Németi, István},
+   title = {Non-Turing Computations Via Malament–Hogarth Space-Times},
+   journal = {International Journal of Theoretical Physics},
+   publisher = {Springer Netherlands},
+   issn = {0020-7748},
+   keyword = {Physics and Astronomy},
+   pages = {341-370},
+   volume = {41},
+   issue = {2},
+   url = {http://dx.doi.org/10.1023/A:1014019225365},
+   note = {10.1023/A:1014019225365},
+   year = {2002}
+}
