--- a/text/main.tex
+++ b/text/main.tex
@@ -25,6 +25,7 @@
 \newcommand*{\WHILE}{\ensuremath{\mathtt{WHILE}}\xspace}
 \newcommand*{\FOR}{\ensuremath{\mathtt{FOR}}\xspace}
 \newcommand*{\TM}{\ensuremath{\mathtt{TM}}\xspace}
+\newcommand*{\N}{\ensuremath{\mathbf{N}}\xspace}
 
 % Note Commands
 \newcommand{\timeestimation}[1]{ \footnote{#1} }
